Added APIs for controlling forward movement of the robot
